set thumbnail / Feature image for non LDAP synced staff

--- a/languages/lab-directory.pot
+++ b/languages/lab-directory.pot
@@ -283,52 +283,52 @@ msgstr ""
 msgid "Fixed-term contract position"
 msgstr ""
 
-#. Do not translate.  This should be translated by each user depending on their custom fields usage.
+#. Do not translate.  This will be translated by each user depending on their custom fields usage.
 #: classes/lab-directory.php:1086
 msgid "custom_fields_1"
 msgstr ""
 
-#. Do not translate.  This should be translated by each user depending on their custom fields usage.
+#. Do not translate.  This will be translated by each user depending on their custom fields usage.
 #: classes/lab-directory.php:1088
 msgid "custom_fields_2"
 msgstr ""
 
-#. Do not translate.  This should be translated by each user depending on their custom fields usage.
+#. Do not translate.  This will be translated by each user depending on their custom fields usage.
 #: classes/lab-directory.php:1090
 msgid "custom_fields_3"
 msgstr ""
 
-#. Do not translate.  This should be translated by each user depending on their custom fields usage.
+#. Do not translate.  This will be translated by each user depending on their custom fields usage.
 #: classes/lab-directory.php:1092
 msgid "custom_fields_4"
 msgstr ""
 
-#. Do not translate.  This should be translated by each user depending on their custom fields usage.
+#. Do not translate.  This will be translated by each user depending on their custom fields usage.
 #: classes/lab-directory.php:1094
 msgid "custom_fields_5"
 msgstr ""
 
-#. Do not translate.  This should be translated by each user depending on their custom fields usage.
+#. Do not translate.  This will be translated by each user depending on their custom fields usage.
 #: classes/lab-directory.php:1096
 msgid "custom_fields_6"
 msgstr ""
 
-#. Do not translate.  This should be translated by each user depending on their custom fields usage.
+#. Do not translate.  This will be translated by each user depending on their custom fields usage.
 #: classes/lab-directory.php:1098
 msgid "custom_fields_7"
 msgstr ""
 
-#. Do not translate.  This should be translated by each user depending on their custom fields usage.
+#. Do not translate.  This will be translated by each user depending on their custom fields usage.
 #: classes/lab-directory.php:1100
 msgid "custom_fields_8"
 msgstr ""
 
-#. Do not translate.  This should be translated by each user depending on their custom fields usage.
+#. Do not translate.  This will be translated by each user depending on their custom fields usage.
 #: classes/lab-directory.php:1102
 msgid "custom_fields_9"
 msgstr ""
 
-#. Do not translate.  This should be translated by each user depending on their custom fields usage.
+#. Do not translate.  This will be translated by each user depending on their custom fields usage.
 #: classes/lab-directory.php:1104
 msgid "custom_fields_10"
 msgstr ""
