added manager contact for custom taxonomies, display contact on page and post, make single_staff template and jury table more responsive add option to add contact on posts and/or pages

--- a/languages/lab-directory-fr_FR.po
+++ b/languages/lab-directory-fr_FR.po
@@ -1314,7 +1314,7 @@ msgid ""
 "must be added or changed on LDAP directory"
 msgstr ""
 "Cette fiche personnelle et la photo sont synchronisés sur l'annuaire LDAP. "
-"La photo doit être modifié ou ajoutés dans l’annuaire LDAP"
+"La photo doit être modifié ou ajoutée dans l’annuaire LDAP"
 
 #: views/admin-settings-permissions.php:76
 #: views/admin-settings-permissions.php:88
