--- a/todo.txt
+++ b/todo.txt
@@ -1,13 +1,23 @@
 DONE: 
+added a post_excerpt for staff (used for filter results);
+added option to have firstname OR name first in title;
+added help and cleaned page for admin general settings;
 
 TODO: 
-ajouter post_excerpt (email) 
-ajouter un "drapeau" devant traduction resumé ->
+test taxonomy avec Premier étage seul, et nested cats
+
 import cnrs refaire liste équipes!! 
+voir cas import ldap hors filtre 
 
 add help for manager
 LDAP sync cron ??
 
+POLYLANG 
+- staff pas de transation redirige vers accueil!! 
+- category avec slug différents en en!! (pirvi-en) mais on peut ajuster URL
+- ajout de /fr /en en fin deurl fonctionne avec add_rewrite_endpoint( 'en', EP_PERMALINK ); , mais pas le switcher
+voir inc/switcher.php et frontened/frontend-liks.php
+SUITE
 defense list ajouter une ancre #PHD?? 
 	
 METAFIelD AIDE À DEPLACER DANS ONGLET AIDE
@@ -43,5 +53,8 @@ OK ajouter settings (locale) lang1 lang2 pour sujet résume, bio...
 	$lang = explode('-', get_bloginfo('language'));
 	$lang = $lang[0];
 
-
+MULTILANGUE 
+polylang compatible siteorigin page builder 'à vérifier) 
+	pas Q-translate, 
+	 	oui pour WPglobus mais payant et en développement 
 Traductions à revoir: 
