--- a/languages/lab-directory-fr_FR.po
+++ b/languages/lab-directory-fr_FR.po
@@ -353,7 +353,7 @@ msgstr ""
 
 #: classes/lab-directory-admin.php:162
 msgid ""
-"Class used in Lab-Directory template div (example given for single_staff "
+"Class used in Lab-Directory template div (example given for staff "
 "template)."
 msgstr ""
 
@@ -364,7 +364,7 @@ msgstr ""
 #: classes/lab-directory-admin.php:165
 msgid ""
 "This div enclose each individual item found in the Lab-Directory loop. It is "
-"prefixed by the name of the template used ( here single_staff) "
+"prefixed by the name of the template used ( here staff) "
 msgstr ""
 
 #: classes/lab-directory-admin.php:166
