--- a/languages/lab-directory.pot
+++ b/languages/lab-directory.pot
@@ -326,7 +326,7 @@ msgid ""
 msgstr ""
 
 #: classes/lab-directory-admin.php:162
-msgid "Class used in Lab-Directory template div (example given for single_staff template)."
+msgid "Class used in Lab-Directory template div (example given for staff template)."
 msgstr ""
 
 #: classes/lab-directory-admin.php:164
@@ -336,7 +336,7 @@ msgstr ""
 #: classes/lab-directory-admin.php:165
 msgid ""
 "This div enclose each individual item found in the Lab-Directory loop. It is prefixed by "
-"the name of the template used ( here single_staff) "
+"the name of the template used ( here staff) "
 msgstr ""
 
 #: classes/lab-directory-admin.php:166
