Lab directory Staff permalink corrected in admim page Add a format switcher for staff list (grid list or photos) Rewrite help for lab-directory loop  and URL_slugs

--- a/languages/lab-directory.pot
+++ b/languages/lab-directory.pot
@@ -486,7 +486,7 @@ msgid "Clear filter"
 msgstr ""
 
 #: classes/lab-directory-shortcode.php:328
-msgid "Filter by name  or firstname"
+msgid "Search by name or firstname"
 msgstr ""
 
 #: classes/lab-directory-shortcode.php:398
