Class lab-directory-admin-menus renamed lab-directory_base and moved to common folder

--- a/todo.txt
+++ b/todo.txt
@@ -1,10 +1,5 @@
 DONE:
-Plugin install: now default metafields settings are used
-Test plugin install, fix some PHP notices at install
-add remove button on HDR Thesis jurys
-Add remove button for now acronyms functionnal
-Add a label above tiny editor 
-Moves Add Query_vars and add Tags so that it its loaded even when lab-directory is not used (when flushing rewrite rules)
+Class lab-directory-admin-menus renamed lab-directory_base and moved to common folder
 
 TODO:
 ==================================
